--- a/h3/utlc/dune
+++ b/h3/utlc/dune
@@ -1,25 +1,27 @@
 (menhir
-  (modules tokens)
-  (flags --only-tokens)
-)
+ (modules tokens)
+ (flags --only-tokens))
 
 (menhir
-  (modules tokens parse)
-  (merge_into parse)
-  (flags --external-tokens Tokens 
-         -la 2
-         ;--trace
-         )
-)
+ (modules tokens parse)
+ (merge_into parse)
+ (flags
+  --external-tokens
+  Tokens
+  -la
+  2
+  ;--trace
+  ))
 
 (ocamllex lex)
 
 (executable
  (name utlc)
  (libraries menhirLib core)
- (preprocess (pps ppx_sexp_conv ppx_compare))
- )
+ (preprocess
+  (pps ppx_sexp_conv ppx_compare)))
 
 (env
-  (_ 
-    (flags (:standard -warn-error -A))))
+ (_
+  (flags
+   (:standard -warn-error -A))))
